--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/style.css" type='text/css'>
-    <script src='https://s3-us-west-1.amazonaws.com/yasmirtudoachimandirochichi/scripts/JSXTransformer.js'></script>
+    <script src='./app/vendor/JSXTransformer.js'></script>
+    <script type='application/javascript' src='./app/vendor/fastclick.min.js'></script>
     <script src="https://fb.me/react-0.13.3.js"></script>
-    <script src='https://s3-us-west-1.amazonaws.com/yasmirtudoachimandirochichi/scripts/jquery-2.1.4.min.js'></script>
-    <scritp src='https://s3-us-west-1.amazonaws.com/yasmirtudoachimandirochichi/scripts/tween.min.js'></script>
+    <script src='./app/vendor/jquery-2.1.4.min.js'></script>
     <title>Uncscramble!</title>
   </head>
   <body>
     <script src='./compiled/application.js'></script>
+    <script type="text/js">
+      (function attachFastClick() {
+        if ('addEventListener' in document) {
+          document.addEventListener('DOMContentLoaded', function() {
+              FastClick.attach(document.body);
+          }, false);
+        }
+      }())
+    </script>
   </body>
 </html>
