--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" type='text/css'>
     <script src='./app/vendor/JSXTransformer.js'></script>
     <script type='application/javascript' src='./app/vendor/fastclick.min.js'></script>
-    <script src="https://fb.me/react-0.13.3.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/yasmirtudoachimandirochichi/scripts/react_0-13-3_prod.js"></script>
     <script src='./app/vendor/jquery-2.1.4.min.js'></script>
     <title>Uncscramble!</title>
   </head>
